# KeyTA

./: .gitignore  DEVELOPMENT.md  README.md  Tutorial.md  pyproject.toml  repl.ipynb
src/keyta/: IProcess.py  Listener.py  __main__.py  app.py  icons.py  manage.py  rf_remote_server.py  select_value.py  todo.md  widgets.py
src/keyta/DE/: __main__.py
src/keyta/admin/: base_admin.py  base_inline.py  field_delete_related_instance.py  field_documentation.py  field_execution_state.py  keywords_inline.py  list_filters.py  system.py  testcase.py  variable.py  window.py
src/keyta/apps/actions/: apps.py
src/keyta/apps/common/: abc.py  widgets.py
src/keyta/apps/executions/: apps.py  errors.py
src/keyta/apps/keywords/: apps.py  forms.py  json_value.py  (+1 more)
src/keyta/forms/: __init__.py  baseform.py  optional_argument.py  quickadd_formset.py
src/keyta/media/: apps.py
src/keyta/models/: base_model.py  documentation_mixin.py  html2text.py  keyword_source.py  system.py  testcase.py  variable.py  window.py
src/keyta/project/: asgi.py  context_processors.py  filters.py  icons.py  settings.py  tags.py  urls.py  wsgi.py
src/keyta/rf_export/: keywords.py  resource.py  rfgenerator.py  settings.py  testcases.py  testsuite.py
src/keyta/rf_import/: import_keywords.py  import_library.py  import_resource.py
src/keyta/rf_log/: __init__.py  robot_log.py
src/keyta/templates/: checkbox_select_systems.html  execution.html  execution_messages.html  select_execution_state.html  select_option_execution_state.html  sortable_tabular.html
src/keyta/views/: testcase.py
(+564 files in other folders)
