[project]
name = "robotframework-keyta"
description = "A web UI for Robot Framework"
authors = [
    {name = "Marduk Bolanos, imbus Rheinland", email = "testautomatisierung@imbus.de"},
]
readme = "README.md"
license = {text = "Apache 2.0"}
version = "2.0.0"

dependencies = [
    "django>=4.2.0",
    "django-admin-sortable2==2.2.3",
    "django-clone~=5.3.0",
    "django-jazzmin~=3.0.0",
    "django-select2~=8.4.0",
    "django-tinymce~=4.1.0",
    "Jinja2~=3.1.0",
    "Pillow~=11.2.1",
    "pystray~=0.19.0",
    "robotframework>=7"
]
requires-python = ">=3.9"

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: Microsoft :: Windows :: Windows 10",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Testing"
]


[project.urls]
Homepage = "https://pypi.org/project/robotframework-keyta/"
Repository = "https://github.com/RF-KeyTA/KeyTA.git"

[project.scripts]
keyta = "keyta.app:keyta"
keyta-de = "keyta.app:keyta_de"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "keyta"
